# fusion-mcp

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  research.md
addin/: FusionMCP.manifest  FusionMCP.py
server/: fusion360_mcp_server.py
