[project]
name = "fusion-mcp"
version = "0.1.0"
description = "Open-source MCP server for Autodesk Fusion 360 — control CAD from Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
fusion-mcp = "server.fusion360_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
